feat(deps): 添加faiss-cpu和tiktoken依赖

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "asyncio>=4.0.0",
     "bs4>=0.0.2",
     "dashscope>=1.23.5",
+    "faiss-cpu>=1.12.0",
     "gradio>=5.49.1",
     "langchain>=0.3.25",
     "langchain-community>=0.3.24",
@@ -30,6 +31,7 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "selenium>=4.34.2",
     "sentence-transformers>=5.1.2",
+    "tiktoken>=0.9.0",
 ]
 
 [tool.uv]
